--- a/Jogo-de-adivinha/Jogo_de_adivinha-main/index.html
+++ b/Jogo-de-adivinha/Jogo_de_adivinha-main/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Exercício jQuery</title>
+    <title>JOGO DE ADIVINHA</title>
 </head>
 <body>
-    
+    <H1>Vamos jogar ?</H1>
+    <button>COMEÇAR</button>
     <p id="resposta"></p>
-    <script src="adivinha-n.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
