--- a/Jogo-de-adivinha/Jogo_de_adivinha-main/index.html
+++ b/Jogo-de-adivinha/Jogo_de_adivinha-main/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>JOGO DE ADIVINHA</title>
+    <title>jogar jQuery</title>
 </head>
 <body>
     <H1>Vamos jogar ?</H1>
-    <button>COMEÇAR</button>
-    <p id="resposta"></p>
+    <p>Um numero de 0 a 100 será gerado aleatoriamente, você terá 10 tentativas para acerta</p>
+    <button onclick="ADIVINHA()">COMEÇAR</button>
     <script src="script.js"></script>
 </body>
 </html>
